--- a/task4/docker-compose.yml
+++ b/task4/docker-compose.yml
@@ -1,18 +1,30 @@
-version: "3.8"
-
 services:
   back-end:
     build:
       context: ./back-end
       dockerfile: Dockerfile
     container_name: softy-pinko-back-end
-    ports:
-      - "5252:5252"
+    expose:
+      - "5252"
 
   front-end:
     build:
       context: ./front-end
       dockerfile: Dockerfile
     container_name: softy-pinko-front-end
+    expose:
+      - "9000"
+    depends_on:
+      - back-end
+
+  proxy:
+    build:
+      context: ./proxy
+      dockerfile: Dockerfile
+    image: proxy
+    container_name: softy-pinko-proxy
     ports:
-      - "9000:9000"
+      - "80:80"
+    depends_on:
+      - front-end
+      - back-end
